# shm-lockfree-queue

./: CMakeLists.txt  README.md
benchmarks/latency/: main_latency.cpp
include/shm_ipc/core/: ring_buffer.hpp
include/shm_ipc/utils/: aligned_allocator.hpp
